--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lyka</title>
-    <link rel="icon" href="/assets/images/turtle.jpg" type="image/x-icon">
+    <link rel="icon" href="assets/images/turtle.jpg" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/style2.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <a href="/index.html" class="logo">
-            <img src="/assets/images/turtle.jpg">Lyka
+        <a href="index.html" class="logo">
+            <img src="assets/images/turtle.jpg">Lyka
         </a>
         <nav class="navbar">
             <a href="baguio.html">Baguio Dump</a>
@@ -35,24 +35,24 @@
             <ul class="card-list">
                 <!--1st-->
                 <li class="card-item">
-                    <a href="/cute.html" class="card-link">
-                        <img src="/assets/images/cute lyk/c11.png" alt="cute" class="card-image">
+                    <a href="cute.html" class="card-link">
+                        <img src="assets/images/cute lyk/c11.png" alt="cute" class="card-image">
                         <p class="badge">Cute</p>
                     </a>
                 </li>
 
                 <!--2nd-->
                 <li class="card-item">
-                    <a href="/pretty.html" class="card-link">
-                        <img src="/assets/images/pretty lyk/p13.jpeg" alt="pretty" class="card-image">
+                    <a href="pretty.html" class="card-link">
+                        <img src="assets/images/pretty lyk/p13.jpeg" alt="pretty" class="card-image">
                         <p class="badge">Pretty</p>
                     </a>
                 </li>
 
                 <!--3rd-->
                 <li class="card-item">
-                    <a href="/hot.html" class="card-link">
-                        <img src="/assets/images/hot lyk/h7.jpeg" alt="hot" class="card-image">
+                    <a href="hot.html" class="card-link">
+                        <img src="assets/images/hot lyk/h7.jpeg" alt="hot" class="card-image">
                         <p class="badge">Hot</p>
                     </a>
                 </li>
